--- a/app/stylesheets/base/_fonts.scss
+++ b/app/stylesheets/base/_fonts.scss
@@ -1,3 +1,13 @@
 // -----------------------------------------------------------------------------
 // This file contains all @font-face declarations, if any.
 // -----------------------------------------------------------------------------
+
+
+@include font-face("Nautilus", '../asset/fonts/nautilus/nautilus-webfont', normal, normal);
+
+@include font-face("Montserrat", '../asset/fonts/Montserrat/montserrat-light-webfont', 300, normal);
+@include font-face("Montserrat", '../asset/fonts/Montserrat/montserrat-bold-webfont', bold, normal);
+
+@include font-face("ProximaNova", '../asset/fonts/ProximaNova/proxima_nova_bold-webfont', bold, normal);
+@include font-face("ProximaNova", '../asset/fonts/ProximaNova/proxima_nova_light-webfont', 300, normal);
+@include font-face("ProximaNova", '../asset/fonts/ProximaNova/proxima_nova_regular-webfont', 400, normal);
